--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+spring.application.name=CandidatApiApplication
+server.port=8082
+spring.cloud.config.enabled=false
+spring.cloud.config.import-check.enabled=false
 
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.username=4TWIN6
+spring.datasource.password=4TWIN6
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = create
+spring.datasource.url=jdbc:h2:file:~/test
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#keycloack
+keycloak.auth-server-url=http://localhost:8180/auth
+keycloak.realm=JobBoardKeyclock
+keycloak.resource=CandidatApiApplication
+keycloak.public-client=true
+keycloak.use-resource-role-mappings=true
